name = "safe_backup"
version = "1.0.0"
edition = "2021"
authors = ["20240125, 2024017, 2024598"]
description = "SafeBackup: secure CLI utility (backup/restore/delete) in Rust via Cargo"
repository = "https://github.com/KaleiDev/safe_backup_CYB225"

[dependencies]
time = { version = "0.3", features = ["formatting"] }

